[package]
name = "landscape"
version.workspace = true
edition.workspace = true

[dependencies]
landscape-ebpf = { path = "../landscape-ebpf" }
landscape-common = { path = "../landscape-common" }
landscape-database = { path = "../landscape-database" }
landscape-dns = { path = "../landscape-dns" }
landscape-protobuf = { path = "../landscape-protobuf" }

anyhow = { workspace = true }

paste = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
fs2 = { workspace = true }
sha2 = { workspace = true }
# const_format = { workspace = true }
# rusty_network_manager = "0.5.1"
tokio-stream = { workspace = true }
zbus = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
pem = { workspace = true }
instant-acme = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
x509-parser = { workspace = true }
hmac = { workspace = true }
md-5 = { workspace = true }
sha1 = { workspace = true }
quick-xml = { workspace = true }

rtnetlink = { workspace = true }
netlink-sys = { workspace = true }
netlink-packet-route = { workspace = true }
netlink-packet-core = { workspace = true }
wl-nl80211 = { workspace = true }
genetlink = { workspace = true }
netlink-packet-generic = { workspace = true }
libc = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

cidr = { workspace = true }

hickory-proto = { workspace = true, features = ["serde"] }
socket2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

chrono = { workspace = true }

idna = { workspace = true }

tokio = { workspace = true, features = ["full", "net", "io-util"] }
tokio-util = { workspace = true }
rand = { workspace = true }

clap = { workspace = true }
bollard = { workspace = true }

# logs
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }

dhcproto = { workspace = true }

sysctl = { workspace = true }

portable-pty = { workspace = true }
# pseudoterminal = { version = "0.2.1", features = ["non-blocking"] }

duckdb = { workspace = true, optional = true }
r2d2 = { workspace = true, optional = true }
sqlx = { version = "0.8.6", default-features = false, features = [
    "sqlite",
    "runtime-tokio-rustls",
], optional = true }

etherparse = { workspace = true }
[dependencies.pnet]
workspace = true

[features]
default = []
metric-duckdb = ["dep:duckdb", "dep:r2d2", "dep:sqlx"]
duckdb-bundled = ["metric-duckdb", "duckdb/bundled"]

[dev-dependencies]
axum = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
